# video-transcriber

./: .gitignore  README.md  pom.xml
backend/: .env.example  api_payment.py  api_summarize.py  auth.py  downloader.py  pyproject.toml  summarizer.py  transcriber.py
frontend/: index.html
temp/: raw_GitHub_0a89ba.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_197e03.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_1df9d2.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_2d58cf.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_31a213.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_3b58e1.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_47c05c.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_51f7d2.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_55b7a4.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_787e1d.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_80f6ff.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_81358e.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_81b1c5.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_82f05f.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_8a756f.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_8d6b47.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_8e20a0.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_94f733.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_acc512.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_c6744e.md  raw_Natalie_Lynn_Breaks_Down_Her_Most_Iconic_Shots_ce9fb9.md  summary_GitHub_66037c.md  tasks.json  (+44 more)
(+43 files in other folders)
